fixed viewport issues on ios, made projects page mobile friendly

--- a/components/layout.module.css
+++ b/components/layout.module.css
@@ -2,8 +2,8 @@
 .container {
   display: flex;
   flex-direction: column;
-  height: 100vh;
-  width: 100vw;
+  height: 100svh;
+  width: 100svw;
 }
 
 .main {
