--- a/styles/CV.module.css
+++ b/styles/CV.module.css
@@ -2,7 +2,7 @@
     height: 100%;
     display: flex;
     overflow: scroll;
-    padding: 2rem 10rem
+    padding: 2rem 1vw
 }
 
 .cvtable {
@@ -22,7 +22,6 @@
 
 .cvlist {
     height: 100%;
-    padding-bottom: 2rem;
     display:none;
 }
 
