--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -1,31 +1,15 @@
 .welcome {
-    margin-top: -5rem;
-    margin-left: -0.2rem;
-    position: sticky;
-    z-index: 0;
-    user-select: none;
+  margin-top: -5.6vw;
+  margin-left: -0.2vw;
+  position: sticky;
+  z-index: 0;
+  user-select: none;
 }
 
 .welcomeTitle {
-    font-size: 18rem;
-    line-height: 1.2;
-    font-weight: 800;
-    letter-spacing: -0.05rem;
-    margin: 0;
-  }
-
-  @media only screen and (max-width: 768px) {
-    .welcomeTitle {
-        display: none;
-    }
-  }
-
-  @media only screen and (max-width: 1024px) {
-    .welcomeTitle {
-        font-size: 13rem;
-    }
-
-    .welcome {
-        margin-top: -3.6rem;
-    }
-  }
+  font-size: 20vw;
+  line-height: 1.2;
+  font-weight: 800;
+  letter-spacing: -0.05rem;
+  margin: 0;
+}
