--- a/styles/globals.css
+++ b/styles/globals.css
@@ -10,12 +10,9 @@ html,
 body {
   padding: 0;
   margin: 0;
-  height: 100svh;
+  height: 100vh;
   overflow-y: hidden;
   overflow-x: hidden;
-  /*display: flex;
-  flex-direction: column;
-  overflow: hidden;*/
   font-family: Inter, -apple-system, BlinkMacSystemFont, Segoe UI, Roboto,
     Oxygen, Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
   background-color: var(--myWhite);
